--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,13 @@
 }
 
 body {
-    font-family: system-ui, "Segoe UI", Roboto, "Helvetica Neue", helvetica,
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 main {
@@ -107,4 +112,8 @@ button:hover {
 input[type="submit"]:disabled,
 button:disabled {
     background-color: rgb(122, 160, 248);
+}
+
+.potato-holder {
+    color: red;
 }
