--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    font-size: 13px;
-    font-weight: bold;
+    font-size: 14px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -19,8 +18,16 @@ body {
 main {
     padding-top: 1em;
     padding-bottom: 1em;
-    width: min(800px, 95vw);
+    width: 80%;
     margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 60px;
+}
+
+main > div {
+    flex-basis: 25%;
 }
 
 h1 {
@@ -80,40 +87,79 @@ li span:nth-child(3) {
     white-space: nowrap;
 }
 
-form {
+.heading, .heading__logs {
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.heading__logs {
+    text-align: left;
+}
+
+.instructions__keys {
+    font-family: "CaskaydiaCove NF Mono";
+}
+
+.instructions__number {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.logs {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    gap: 15px;
 }
 
-input:not([type]) {
-    padding: 6px 12px 6px 12px;
-    color: rgb(33, 37, 41);
-    border: solid 1px rgb(206, 212, 218);
-    border-radius: 8px;
-    font-size: 16px;
+.logs__label {
+    font-weight: 600;
 }
 
-input[type="submit"],
-button {
-    margin-left: 4px;
-    background: lightblue;
+.player__container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.player {
+    text-align: center;
+    border: 1px solid #eee;
+    padding: 10px;
+    border-radius: 40px;
+    background: linear-gradient(45deg, #2563eb, #6d28d9);
     color: white;
-    padding: 6px 12px 6px 12px;
-    border-radius: 8px;
-    font-size: 16px;
-    background-color: rgb(49, 108, 244);
+    font-weight: bold;
+    cursor: pointer;
 }
 
-input[type="submit"]:hover,
-button:hover {
-    background-color: rgb(41, 93, 207);
-}
-
-input[type="submit"]:disabled,
-button:disabled {
-    background-color: rgb(122, 160, 248);
+.player:active {
+    opacity: 0.8;
 }
 
 .potato-holder {
-    color: red;
+    background: #dc2626;
+}
+
+.buttons__container button {
+    text-decoration: none;
+    font-size: 14px;
+    color: white;
+    font-weight: bold;
+    background: #1d4ed8;
+    padding: 10px;
+    border-radius: 40px;
+    border: 1px solid #eee;
+    cursor: pointer;
+}
+
+.buttons__container button:active {
+    opacity: 0.8;
+}
+
+.buttons__container, .buttons__container > div {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
