--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
-/* reset */
+@font-face {
+    font-family: 'CaskaydiaCove Nerd Font Mono';
+    src: url('./Caskaydia Cove Nerd Font Complete Mono Regular.otf') format('otf');
+}/* reset */
+
+
 * {
     margin: 0;
     padding: 0;
@@ -99,7 +104,7 @@ li span:nth-child(3) {
 }
 
 .instructions__keys {
-    font-family: "CaskaydiaCove NF Mono";
+    font-family: "CaskaydiaCove Nerd Font Mono", "SF Pro Display", serif;
     /*line-height: 28px;*/
 }
 
