--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
     src: url('./Caskaydia Cove Nerd Font Complete Mono Regular.otf') format('otf');
 }/* reset */
 
+@font-face {
+    font-family: 'CaskaydiaCove Nerd Font';
+    src: url('./CaskaydiaCove-Regular.ttf') format('otf');
+}/* reset */
 
 * {
     margin: 0;
@@ -104,7 +108,7 @@ li span:nth-child(3) {
 }
 
 .instructions__keys {
-    font-family: "CaskaydiaCove Nerd Font Mono", "SF Pro Display", serif;
+    font-family: "CaskaydiaCove Nerd Font Mono", "CaskaydiaCove Nerd Font", serif;
     /*line-height: 28px;*/
 }
 
