--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 @font-face {
     font-family: 'CaskaydiaCove Nerd Font Mono';
     src: url('./Caskaydia Cove Nerd Font Complete Mono Regular.otf') format('otf');
@@ -108,7 +111,7 @@ li span:nth-child(3) {
 }
 
 .instructions__keys {
-    font-family: "CaskaydiaCove Nerd Font Mono", "CaskaydiaCove Nerd Font", serif;
+    font-family: "CaskaydiaCove Nerd Font Mono", "CaskaydiaCove Nerd Font", "Open Sans", serif;
     /*line-height: 28px;*/
 }
 
