--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,12 @@
 
 @font-face {
     font-family: 'CaskaydiaCove Nerd Font Mono';
-    src: url('./Caskaydia Cove Nerd Font Complete Mono Regular.otf') format('otf');
+    src: url('public/Caskaydia Cove Nerd Font Complete Mono Regular.otf') format('otf');
 }/* reset */
 
 @font-face {
     font-family: 'CaskaydiaCove Nerd Font';
-    src: url('./CaskaydiaCove-Regular.ttf') format('ttf');
+    src: url('public/CaskaydiaCove-Regular.ttf') format('ttf');
 }/* reset */
 
 * {
