--- a/src/fonts.css
+++ b/src/fonts.css
@@ -5,5 +5,5 @@
 
 @font-face {
     font-family: 'CaskaydiaCove Nerd Font';
-    src: url('/assets/CaskaydiaCove-Regular.41dc96dc.ttf') format('ttf');
+    src: url('./CaskaydiaCove-Regular.ttf') format('ttf');
 }
