--- a/src/fonts.css
+++ b/src/fonts.css
@@ -7,3 +7,8 @@
     font-family: 'CaskaydiaCove Nerd Font';
     src: url('./CaskaydiaCove-Regular.ttf') format('ttf');
 }
+
+@font-face {
+    font-family: 'Inconsolata Patched';
+    src: local('Inconsolata Patched'), url('https://rawgit.com/ryanoasis/nerd-fonts/master/patched-fonts/Inconsolata/Inconsolata%20for%20Powerline%20Plus%20Nerd%20File%20Types%20Mono%20Plus%20Font%20Awesome%20Plus%20Octicons%20Plus%20Pomicons.otf') format('opentype');
+}
