--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ li span:nth-child(3) {
 }
 
 .instructions__keys {
-    font-family: "CaskaydiaCove Nerd Font Mono", "CaskaydiaCove Nerd Font", "Open Sans", serif;
+    font-family: "CaskaydiaCove Nerd Font Mono", "CaskaydiaCove Nerd Font", "Inconsolata Patched", "Open Sans", serif;
     /*line-height: 28px;*/
 }
 
